# JobMatchRAG

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: Architecture-Execution-Blueprint-JobMatchRAG.md  Open-Questions-Architecture-Decisions-JobMatchRAG.md  PRD-JobMatchRAG.md
docs/architecture/: domain-data-overview.md  ingestion-and-sources.md  scoring-foundation.md  system-overview.md  vertical-roadmap.md
docs/archive/: Architecture-Execution-Blueprint-JobMatchRAG.md
docs/operations/: observability-and-security.md  policies-and-controls.md
docs/product/: recruiter-chat.md
docs/sources/: infojobs-api-reference.md
openspec/: config.yaml
openspec/specs/cost-observability-controls/: spec.md
openspec/specs/infojobs-source-ingestion/: spec.md
openspec/specs/ingestion-governance/: spec.md
openspec/specs/offer-canonicalization-baseline/: spec.md
openspec/specs/project-tooling-bootstrap/: spec.md
openspec/specs/source-ingestion-framework/: spec.md
openspec/specs/source-search-strategy/: spec.md
src/jobmatchrag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/jobmatchrag/source_ingestion/: __init__.py  contracts.py  data_loader.py  models.py  orchestrator.py  search_strategy.py
tests/: test_smoke.py  test_uv_bootstrap_alignment.py
tests/integration/source_ingestion/: test_infojobs_adapter_flow.py  test_job_run_flow.py
tests/unit/source_ingestion/: test_contracts.py  test_infojobs_adapter.py  test_infojobs_discovery.py  test_infojobs_errors.py  test_infojobs_mapping.py  test_infojobs_raw_handoff.py  test_orchestrator.py  (+1 more)
(+65 files in other folders)
